# esp_ethernet

./: CMakeLists.txt  Kconfig  ethernet.c  modutr_slave.c  readme.md  ringbuffer.c
config/: config.schema.json
include/: eth_config.hpp  ethernet.h  modutr_slave.h  ringbuffer.h  typedefs_modutr.h
src/: ethernet.c
